--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,19 @@ input, textarea, select{
     resize: none;
 }
 
+.signup {
+    width: 400px;
+    margin: auto;
+    margin-top: 125px;
+  }
+
+  .login {
+    width: 400px;
+    margin: auto;
+    margin-top: 150px;
+    padding: 20px;
+  }
+
 /* container */
 .container{
     max-width: 1200px;
